--- a/app/languages/fr.json
+++ b/app/languages/fr.json
@@ -6,8 +6,8 @@
   "overview.HashDiff": "Difficulté Hash",
   "overview.StakeDiff": "Difficulté Stake",
   "overview.Balance": "Solde",
-  "overview.EncryptedModal": "Votre portefeuille n'est pas encrypté!",
-  "overview.Suggestion": "Il est fortement conseillé d'encrypter votre portefeuille afin de protéger vos NXS.",
+  "overview.EncryptedModal": "Votre portefeuille n'est pas chiffré!",
+  "overview.Suggestion": "Il est fortement conseillé de chiffrer votre portefeuille afin de protéger vos NXS.",
   "overview.Ignore": "Ignorer",
   "overview.TakeMeThere": "S'y rendre",
   "overview.Transactions": "Transactions",
@@ -16,49 +16,49 @@
   "overview.CirculatingSupply": "Offre en circulation",
   "overview.24hrChange": "Changement en 24h",
   "overview.Connections": "Connexions",
-  "overview.BlockCount": "Nombre de Blocs",
+  "overview.BlockCount": "Nombre de blocs",
   "overview.InterestRate": "Stake Reward",
   "overview.StakeWeight": "Stake Weight",
-  "overview.Globe": "Globe includes GeoLite2",
-  "sendReceive.SendNexus": "Envoyer des NXS",
+  "overview.Globe": "Globe inclut GeoLite2",
+  "sendReceive.SendNexus": "Envoyer NXS",
   "sendReceive.SendFrom": "Envoyer depuis",
   "sendReceive.SendTo": "Envoyer vers",
   "sendReceive.RecipientAddress": "Adresse du destinataire",
   "sendReceive.Address": "Adresse NXS",
-  "sendReceive.Amount": "Montant de NXS",
+  "sendReceive.Amount": "Montant NXS",
   "sendReceive.TableAddress": "Adresse",
   "sendReceive.TableAmount": "Montant",
   "sendReceive.Message": "Message",
   "sendReceive.Remove": "Enlever",
-  "sendReceive.AddRecipient": "Ajouter un Destinataire",
+  "sendReceive.AddRecipient": "Ajouter un destinataire",
   "sendReceive.RemoveRecipient": "Retirer le destinataire",
   "sendReceive.Queue": "File",
   "sendReceive.ClearQueue": "Effacer la file d'attente",
-  "sendReceive.SendAll": "Tout Envoyer",
-  "sendReceive.SendNow": "Envoyer Maintenant",
+  "sendReceive.SendAll": "Tout envoyer",
+  "sendReceive.SendNow": "Envoyer maintenant",
   "sendReceive.AddToQueue": "Ajouter à la file",
   "sendReceive.EditQueue": "Modifier la file",
-  "sendReceive.MyAccount": "Mon Compte",
-  "sendReceive.EnterYourMessage": "Entrez Votre Message",
+  "sendReceive.MyAccount": "Mon compte",
+  "sendReceive.EnterYourMessage": "Entrez votre message",
   "sendReceive.Lookup": "Rechercher l'adresse",
   "sendReceive.Name": "Nom",
   "sendReceive.Cancel": "Annuler",
   "sendReceive.Yes": "Oui",
-  "sendReceive.SendTransaction": "Envoyer La Transaction?",
-  "sendReceive.SendAllFrom": "Envoyer Toutes Les Transactions Depuis: ",
-  "sendReceive.EditEntry": "Modifier Cette Entrée",
-  "sendReceive.RemoveFromQueue": "Supprimer Cette Entrée?",
+  "sendReceive.SendTransaction": "Envoyer la transaction?",
+  "sendReceive.SendAllFrom": "Envoyer toutes les transactions depuis: ",
+  "sendReceive.EditEntry": "Modifier cette entrée",
+  "sendReceive.RemoveFromQueue": "Supprimer cette entrée?",
   "sendReceive.No": "Non",
   "sendReceive.Total": "TOTAL",
   "sendReceive.From": "DEPUIS",
   "sendReceive.FEE": "Frais",
-  "sendReceive.CopyToFeild": "Copier Vers le Champ",
-  "sendReceive.ClickToEdit": "Cliquer Pour Modifier",
-  "sendReceive.SelectAnAccount": "Séléctionner Un Compte",
-  "sendReceive.FromAccount": "Depuis Le Compte",
-  "sendReceive.ToAccount": "Vers Le Compte",
-  "sendReceive.MoveNXS": "Transférer Des NXS",
-  "sendReceive.MoveNxsBetweenAccount": "Transférer des NXS dntre plusieurs comptes",
+  "sendReceive.CopyToFeild": "Copier vers le champ",
+  "sendReceive.ClickToEdit": "Cliquer pour modifier",
+  "sendReceive.SelectAnAccount": "Séléctionner un compte",
+  "sendReceive.FromAccount": "Depuis le compte",
+  "sendReceive.ToAccount": "Vers le compte",
+  "sendReceive.MoveNXS": "Transférer NXS",
+  "sendReceive.MoveNxsBetweenAccount": "Transférer NXS entre plusieurs comptes",
   "sendReceive.Contacts": "Contacts",
   "sendReceive.MultipleRecipients": "Envoyer à plusieurs destinataires",
   "sendReceive.Messages.NoAccounts": "Aucun compte sélectionné",
@@ -74,8 +74,8 @@
   "transactions.Details": "Détails de la transaction",
   "transactions.fee": "Frais",
   "transactions.confirmations": "Confirmations",
-  "transactions.blockhash": "Hash du Bloc",
-  "transactions.blocknumber": "Numéro du Bloc",
+  "transactions.blockhash": "Hash du bloc",
+  "transactions.blocknumber": "Numéro du bloc",
   "transactions.Transactions": "Transactions",
   "transactions.SearchAddress": "Chercher une adresse",
   "transactions.Type": "Type",
@@ -84,8 +84,8 @@
   "transactions.Sent": "Envoyer",
   "transactions.Genesis": "Genesis",
   "transactions.Trust": "Trust",
-  "transactions.MinimumAmount": "Montant Minimum",
-  "transactions.TimeSpan": "Durée",
+  "transactions.MinimumAmount": "Montant minimum",
+  "transactions.TimeSpan": "Période",
   "transactions.PastYear": "Année passée",
   "transactions.PastMonth": "Mois passé",
   "transactions.PastWeek": "Semaine dernière",
@@ -95,7 +95,7 @@
   "transactions.Amount": "MONTANT",
   "transactions.Account": "COMPTE",
   "transactions.Address": "ADRESSE",
-  "transactions.Time": "Durée",
+  "transactions.Time": "Date",
   "transactions.Previous": "Précédent",
   "transactions.Next": "Suivant",
   "transactions.MyAccount": "Mon compte",
@@ -111,16 +111,16 @@
   "transactions.NoRowsFound": "Aucune rangée trouvée",
   "transactions.AllAccounts": "Tous les comptes",
   "transactions.PENDINGTR": "TRANSACTIONS EN ATTENTE",
-  "Market.Information": "Information du Marché",
-  "Market.Refreash": "Rafraîchir les Données de Marché",
-  "Market.Refreshing": "Rafraîchissement des données de marché...",
+  "Market.Information": "Informations du marché",
+  "Market.Refreash": "Rafraîchir les données du marché",
+  "Market.Refreshing": "Rafraîchissement des données du marché...",
   "Market.All": "Tout",
   "Market.Receive": "Recevoir",
   "Market.Sent": "Envoyé",
   "Market.Genesis": "Genesis",
   "Market.Trust": "Trust",
   "Market.MinimumAmount": "Montant Min",
-  "Market.TimeSpan": "Intervalle de temps",
+  "Market.TimeSpan": "Période",
   "Market.PastYear": "Année passée",
   "Market.PastMonth": "Mois passé",
   "Market.PastWeek": "Semaine dernière",
@@ -144,49 +144,49 @@
   "Market.PriceChange": "Changement de prix",
   "AddressBook.AreYouSureDelete": "Êtes-vous sûr(e) de vouloir supprimer",
   "AddressBook.ThisAddress": "Êtes-vous sûr(e) de vouloir supprimer cette adresse?",
-  "AddressBook.DeleteContact": "Supprimer le Contact",
+  "AddressBook.DeleteContact": "Supprimer le contact",
   "AddressBook.DeleteAddress": "Supprimer",
   "AddressBook.AddressBook": "Carnet d'adresses",
   "AddressBook.Empty": "Votre carnet d'adresses est vide",
   "AddressBook.CreateNewContact": "Créer nouveau contact",
-  "AddressBook.searchC": "Chercher un Compte",
-  "AddressBook.Export": "Exporter des Contacts",
-  "AddressBook.Import": "Importer des Contacts",
-  "AddressBook.SearchContact": "Chercher un Contact",
-  "AddressBook.MyAddresses": "Mes Adresses",
+  "AddressBook.searchC": "Chercher un compte",
+  "AddressBook.Export": "Exporter des contacts",
+  "AddressBook.Import": "Importer des contacts",
+  "AddressBook.SearchContact": "Chercher un contact",
+  "AddressBook.MyAddresses": "Mes adresses",
   "AddressBook.CreateContact": "Créer contact",
   "AddressBook.NewContact": "Nouveau contact",
   "AddressBook.Name": "Nom",
   "AddressBook.ClickToEdit": "Double-cliquer pour modifier",
-  "AddressBook.PhoneNumber": "Numéro de Téléphone",
+  "AddressBook.PhoneNumber": "Numéro de téléphone",
   "AddressBook.Phone": "N° de téléphone",
   "AddressBook.AddAddress": "Ajouter une adresse",
   "AddressBook.BookEmpty": "Votre carnet d'adresses est vide",
-  "AddressBook.EditContact": "Modifier le Contact",
+  "AddressBook.EditContact": "Modifier le contact",
   "AddressBook.Cancel": "Annuler",
   "AddressBook.Account": "Compte",
-  "AddressBook.SearchAccount": "Chercher Par Compte",
+  "AddressBook.SearchAccount": "Chercher par compte",
   "AddressBook.CreateAddress": "Créer une nouvelle adresse",
   "AddressBook.Create": "Créer",
-  "AddressBook.NameOption": "Nom (Facultatif)",
+  "AddressBook.NameOption": "Nom (facultatif)",
   "AddressBook.AddAddressTO": "Ajouter l'adresse à",
-  "AddressBook.Copy": "Cliquer l'Adresse pour Copier",
+  "AddressBook.Copy": "Cliquer l'adresse pour copier",
   "AddressBook.Back": "Retour",
-  "AddressBook.TheirAddresses": "Leurs Adresses",
+  "AddressBook.TheirAddresses": "Leurs adresses",
   "AddressBook.Address": "Adresse",
   "AddressBook.AddressesCountSingular": "{nombre} Adresse",
   "AddressBook.AddressesCountPlural": "{nombre} Adresses",
   "AddressBook.Addresses": "Adresses",
-  "AddressBook.MyAccount": "Mon Compte",
+  "AddressBook.MyAccount": "Mon compte",
   "AddressBook.EnterAddressName": "Saisir le nom de l'adresse",
   "AddressBook.Loading": "Veuillez attendre le chargement du daemon",
-  "AddressBook.NoContacts": "Pas de contrats",
+  "AddressBook.NoContacts": "Pas de contacts",
   "AddressBook.NXSAddress": "Adresse NXS",
   "AddressBook.NexusAddresses": "Adresses NXS",
   "AddressBook.ContactInfo": "Info de contact",
   "AddressBook.Email": "E-mail",
   "AddressBook.PhoneNo": "Numéro de téléphone",
-  "AddressBook.LocalTime": "Temps Local",
+  "AddressBook.LocalTime": "Heure locale",
   "AddressBook.Notes": "Notes",
   "AddressBook.NoInfo": "Aucune information",
   "AddressBook.TheirAddressWithName": "Adresse à {nom}",
@@ -227,7 +227,7 @@
   "AddEditContact.EditSuccess": "Le contact a été mis à jour",
   "Settings.Settings": "Paramètres",
   "Settings.Application": "Application",
-  "Settings.Core": "Core",
+  "Settings.Core": "Noyau",
   "Settings.Security": "Sécurité",
   "Settings.Style": "Style",
   "Settings.SetFee": "Choisir les frais de transaction?",
@@ -236,22 +236,22 @@
   "Settings.OverviewDisplay": "Affichage de la vue d'ensemble",
   "Settings.MinimizeTray": "Réduire dans la barre des tâches",
   "Settings.MinimizeClose": "Minimiser à la fermeture",
-  "Settings.InformationPop": "Popups d'information",
+  "Settings.InformationPop": "Bulles d'information",
   "Settings.UsageData": "Envoyer des données d'usage anonymes",
   "Settings.OptionalFee": "Frais de transaction optionnels (NXS)",
-  "Settings.Set": "Set",
+  "Settings.Set": "Appliquer",
   "Settings.DeveloperMode": "Mode développeur",
-  "Settings.BackupWallet": "Sauver le portefeuille",
+  "Settings.BackupWallet": "Sauvegarder le portefeuille",
   "Settings.StartUp": "Lancer au démarrage du système",
-  "Settings.ChangesNexTime": "Les changements appliqués au core prendront effet au prochain redémarrage du core",
-  "Settings.ManualDaemonEntry": "Entrer en mode Daemon manuel?",
-  "Settings.ManualDaemonExit": "Quitter le mode Daemon manuel?",
-  "Settings.ManualDaemonWarning": "(Cela va arrêter votre Daemon)",
+  "Settings.ChangesNexTime": "Les changements appliqués au noyau prendront effet au prochain redémarrage du noyau",
+  "Settings.ManualDaemonEntry": "Entrer en mode daemon manuel?",
+  "Settings.ManualDaemonExit": "Quitter le mode daemon manuel?",
+  "Settings.ManualDaemonWarning": "(Cela va arrêter votre daemon)",
   "Settings.Username": "Nom d'utilisateur",
   "Settings.AutoUpdate": "Mise à jour automatique (recommandé)",
   "Settings.AutoUpdateNote": "Vérifier automatiquement l'existence de nouvelles versions et me notifier si une nouvelle version est disponible",
   "Settings.DisableAutoUpdate": "Êtes-vous sûr(e) de vouloir désactiver la mise à jour automatique ?",
-  "Settings.DisableAutoUpdateNote": "La mise à jour de votre porte-monnaie est importante pour votre sécurité et vous garantira la meilleure expérience utilisateur possible",
+  "Settings.DisableAutoUpdateNote": "La mise à jour de votre portefeuille est importante pour votre sécurité et vous garantira la meilleure expérience utilisateur possible",
   "Settings.KeepAutoUpdate": "Maintenir activée la mise à jour automatique",
   "Settings.TurnOffAutoUpdate": "Désactiver la mise à jour automatique",
   "Settings.DaemonLoading": "Veuillez attendre le chargement du daemon",
@@ -284,7 +284,7 @@
   "Settings.Errors.ChangingPassword": "Erreur du changement de mot de passe",
   "Settings.Errors.PasswordRequired": "Mot de passe est requis",
   "Settings.Errors.PasswordInvalidChars": "Le mot de passe ne peut pas contenir les caractères suivants: - $ / & * | < >",
-  "Settings.Errors.PasswordMinLength": "Le mot de passe doit faire au moins 8 caractères",
+  "Settings.Errors.PasswordMinLength": "Le mot de passe doit comporter au moins 8 caractères",
   "Settings.Errors.PasswordsNoMatch": "Les mots de passe ne correspondent pas",
   "Settings.Errors.PasswordSpaces": "Le mot de passe ne peut pas débuter ou terminer par un espace",
   "Settings.Errors.EncryptingWallet": "Erreur lors du chiffrage du portefeuille",
@@ -310,7 +310,7 @@
   "Settings.ProxyIP": "Adresse IP Proxy",
   "Settings.ProxyPort": "Port du Proxy",
   "Settings.Detach": "Détacher la base de données à l'arrêt",
-  "Settings.RestartCore": "Redémarrer Core",
+  "Settings.RestartCore": "Redémarrer le noyau",
   "Settings.Language": "Langue",
   "Settings.English": "Anglais",
   "Settings.Russian": "Russe",
@@ -348,11 +348,11 @@
   "Settings.RenderGlobe": "Afficher le globe",
   "Settings.ResetStyle": "Réinitialiser les paramètres de style",
   "Settings.Color": "Couleur",
-  "Settings.Fiat": "Monnaies Fiat",
+  "Settings.Fiat": "Monnaies fiduciaires",
   "Settings.EnableMining": "Activer le Mining",
   "Settings.EnableStaking": "Activer le Staking",
   "Settings.VerboseLevel": "Niveau verbose",
-  "Settings.ManualDaemonMode": "Mode Daemon manuel",
+  "Settings.ManualDaemonMode": "Mode daemon manuel",
   "Settings.DDN": "Nom du répertoire de données",
   "Settings.ChangePassword": "Changer le mot de passe",
   "Settings.PreviousPassword": "Mot de passe précédent",
@@ -378,7 +378,7 @@
   "Console.Console": "Console",
   "Console.ClearConsole": "Effacer la console",
   "Console.Exe": "Exécuter",
-  "Console.MdMode": "Commencé en mode Daemon manuel",
+  "Console.MdMode": "Commencé en mode daemon manuel",
   "Console.CommandsHere": "Entrez les commandes de la console ici (ex: getinfo, help)",
   "TrustList.TrustList": "Liste de Trust",
   "TrustList.Address": "Adresse",
@@ -418,10 +418,10 @@
   "Footer.Settings": "Réglages",
   "Footer.Console": "Console",
   "Footer.Exchange": "Échange",
-  "Footer.Trust": "Confiance",
+  "Footer.Trust": "Trust",
   "Footer.List": "Liste",
   "Header.StakeWeight": "Stake Weight",
-  "Header.InterestRate": "Interest Rate",
+  "Header.InterestRate": "Taux d'intérêt",
   "Header.BlockWeight": "Block Weight",
   "Header.TrustWeight": "Trust Weight",
   "Header.WalletUnencrypted": "Portefeuille non chiffré",
@@ -429,28 +429,28 @@
   "Header.UnlockedUntil": "Débloqué jusqu'au",
   "Header.StakingOnly": "Staking uniquement",
   "Header.Synced": "Synchronisé",
-  "Header.Syncing": "Synchronisation...\nDerrière\n",
+  "Header.Syncing": "Synchronisation...\nEn arrière\n",
   "Header.Blocks": "Blocs",
   "Header.DaemonNotLoaded": "Daemon non chargé",
-  "ToolTip.GettingNextBlock": "Obtenir le bloc suivant...",
+  "ToolTip.GettingNextBlock": "Obtention du bloc suivant...",
   "ToolTip.SystemStartUP": "Démarrer automatiquement le portefeuille au démarrage du système",
   "ToolTip.MinimizeTheWallet": "Réduire le portefeuille dans la barre d'état système",
   "ToolTip.MinimizeOnClose": "Réduire le portefeuille  au lieu de le fermer lorsque vous fermez la fenêtre",
   "ToolTip.ShowPopups": "Afficher les bulles d'information",
   "ToolTip.Usage": "Envoyer des données d'utilisation anonymes pour permettre aux développeurs de Nexus d'améliorer le portefeuille",
   "ToolTip.OptionalFee": "Frais de transaction facultatifs à inclure dans les transactions. Des montants plus élevés permettront aux transactions d'être traitées plus rapidement, des quantités inférieures pourraient entraîner des frais de transaction supplémentaires.",
-  "ToolTip.DevMode": "Le mode développeur permet à des fonctionnalités avancées d’aider au développement. Après avoir activation, le portefeuille doit être fermé et rouvert pour activer ces fonctionnalités.",
+  "ToolTip.DevMode": "Le mode développeur permet des fonctionnalités avancées afin d’aider au développement. Après activation, le portefeuille doit être fermé et rouvert pour activer ces fonctionnalités.",
   "ToolTip.EnableMining": "Activer / désactiver le Mining dans le portefeuille",
   "ToolTip.EnableStaking": "Activer / désactiver le Staking sur le portefeuille",
   "ToolTip.Verbose": "Niveau détaillé pour les journaux",
   "ToolTip.ForkBlock": "Reculer d'une quantité de blocs",
-  "ToolTip.MDM": "Activez le mode Daemon manuel si vous exécutez le Daemon manuellement en dehors du portefeuille",
-  "ToolTip.UserName": "Nom d'utilisateur configuré pour le Daemon manuel",
+  "ToolTip.MDM": "Activez le mode daemon manuel si vous exécutez le daemon manuellement en dehors du portefeuille",
+  "ToolTip.UserName": "Nom d'utilisateur configuré pour le daemon manuel",
   "ToolTip.ConnectionFailure": "Échec de connexion",
-  "ToolTip.Password": "Mot de passe configuré pour le Daemon manuel",
-  "ToolTip.IP": "Adresse IP configurée pour le Daemon manuel",
-  "ToolTip.PortConfig": "Port configuré pour le Daemon manuel",
-  "ToolTip.DataDirectory": "Répertoire de données configuré pour le Daemon manuel",
+  "ToolTip.Password": "Mot de passe configuré pour le daemon manuel",
+  "ToolTip.IP": "Adresse IP configurée pour le daemon manuel",
+  "ToolTip.PortConfig": "Port configuré pour le daemon manuel",
+  "ToolTip.DataDirectory": "Répertoire de données configuré pour le daemon manuel",
   "ToolTip.UPnP": "Ouvrez automatiquement le port client Nexus sur le routeur. Cela ne fonctionne que lorsque votre routeur prend en charge UPnP et qu'il est activé.",
   "ToolTip.Socks4": "Connectez-vous à Nexus via un proxy SOCKS4",
   "ToolTip.IPAddressofSOCKS4proxy": "Adresse IP du serveur proxy SOCKS4",
@@ -467,7 +467,7 @@
   "ToolTip.RecentDatabaseDownloading": "Téléchargement de la base de données récente",
   "ToolTip.PleaseWait": "Veuillez patienter...",
   "ToolTip.RecentDatabaseExtracting": "Extraction de la base de donnée récente",
-  "ToolTip.MinimumConfirmations": "Blank",
+  "ToolTip.MinimumConfirmations": "Vide",
   "Alert.Received": "Transaction reçue",
   "Alert.Sent": "Transaction envoyée",
   "Alert.Genesis": "Transaction Genesis",
@@ -495,13 +495,13 @@
   "Alert.IncorrectPasssword": "Mot de passe incorrect",
   "Alert.CoreSettingsSaved": "Paramètres de base enregistrés",
   "Alert.ContactsExported": "Contacts exportés",
-  "Alert.DaemonLoadingWait": "Chargement du Daemon, veuillez patienter...",
+  "Alert.DaemonLoadingWait": "Chargement du daemon, veuillez patienter...",
   "Alert.nodefaultname": "Le compte ne peut pas être nommé * ou par défaut",
   "Alert.CoreRestarting": "Redémarrage du noyau",
   "Alert.AccountsAreTheSame": "Les comptes sont identiques",
   "Alert.NoSecondAccountChosen": "Aucun second compte sélectionné",
   "Alert.InsufficientFunds": "Fonds insuffisants",
-  "Alert.ManualDaemonDown": "Le Daemon manuel est en panne",
+  "Alert.ManualDaemonDown": "Le daemon manuel est en panne",
   "Cp.AC1": "Couleur d'accent 1",
   "Cp.AC2": "Couleur d'accent 2",
   "Cp.THC": "Couleur d'en-tête de table",
