--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -35,6 +35,7 @@
   "Auto Update is not yet available on Mac, please update the wallet manually for the time being": "Auto Update is not yet available on Mac, please update the wallet manually for the time being",
   "Auto update (Recommended)": "Auto update (Recommended)",
   "Automatically check for new versions and notify if a new version is available.": "Automatically check for new versions and notify if a new version is available.",
+  "Avatar Mode": "Avatar Mode",
   "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.": "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.",
   "Background": "Background",
   "Background Color": "Background Color",
@@ -91,6 +92,7 @@
   "Copy to clipboard": "Copy to clipboard",
   "Core": "Core",
   "Core is in Manual Mode": "Core is in Manual Mode",
+  "Core needs to restart for these settings to take effect!": "Core needs to restart for these settings to take effect!",
   "Core output": "Core output",
   "Core restarting": "Core restarting",
   "Core settings saved": "Core settings saved",
@@ -120,6 +122,7 @@
   "Developer mode": "Developer mode",
   "Development mode enables advanced features to aid in development. After enabling the wallet must be closed and reopened to enable those features.": "Development mode enables advanced features to aid in development. After enabling the wallet must be closed and reopened to enable those features.",
   "Disable %{moduleName}?": "Disable %{moduleName}?",
+  "Disabling Avatar will make the core use a separate change key": "Disabling Avatar will make the core use a separate change key",
   "Dismiss": "Dismiss",
   "Display Test Transactions on the Transactions page": "Display Test Transactions on the Transactions page",
   "Display name": "Display name",
@@ -185,6 +188,7 @@
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.",
   "IP address": "IP address",
   "IP address configured for manual Core.": "IP address configured for manual Core.",
+  "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP",
   "Ignore": "Ignore",
   "Immature": "Immature",
   "Immature Balance": "Immature Balance",
@@ -236,6 +240,7 @@
   "Minimize the wallet when closing the window instead of closing it.": "Minimize the wallet when closing the window instead of closing it.",
   "Minimum amount of confirmations before a block is accepted. Local only.": "Minimum amount of confirmations before a block is accepted. Local only.",
   "Minimum confirmations": "Minimum confirmations",
+  "Mining IP Whitelist": "Mining IP Whitelist",
   "Module Details": "Module Details",
   "Module Specifications version": "Module Specifications version",
   "Module has been successfully installed": "Module has been successfully installed",
@@ -346,6 +351,7 @@
   "Restarting Core...": "Restarting Core...",
   "Restarting Nexus Core...": "Restarting Nexus Core...",
   "Sample Address": "Sample Address",
+  "Save Settings": "Save Settings",
   "Save changes": "Save changes",
   "Search address": "Search address",
   "Search contact": "Search contact",
@@ -372,6 +378,8 @@
   "Sent": "Sent",
   "Set timeout for login": "Set timeout for login",
   "Settings": "Settings",
+  "Settings Saving": "Settings Saving",
+  "Settings Unchanged": "Settings Unchanged",
   "Show transactions chart": "Show transactions chart",
   "Source code": "Source code",
   "Stake": "Stake",
